--- a/website/templates/register_page.html
+++ b/website/templates/register_page.html
@@ -106,7 +106,8 @@
           {{ form.hidden_tag() }}
           <fieldset>
               <legend><b>Register</b></legend>
-              
+              <div style="font-size: 0.75em;color: #666;opacity: 1;">To access the whole site, please feel free to register for an account. There's no need to provide your real information; you may use fictitious data, as this is just a test. No information will be stored or utilized.</div>
+
               <div class="row">
                 <div class="col">
                       <b>{{ form.first_name.label(class="form-label mt-4")}}</b>
